--- a/README
+++ b/README
@@ -77,6 +77,7 @@ $ make
 $ cd ../simtrace
 $ make
 ... (same for simdayone, get_pdgmass, crosssection, ...)
+（no it's delete）
 
 Method B: CMake build (recommended)
 $ . setup.sh
