--- a/docs/report_20251126_en.md
+++ b/docs/report_20251126_en.md
@@ -12,7 +12,22 @@ The primary goal is to determine the optimal experimental configuration for the 
 ## 2. System Architecture & Data Flow
 We have established a complete simulation and analysis framework with the following pipeline:
 
-**`QMD Raw Data` $\rightarrow$ `Geant4 Input` $\rightarrow$ `Geant4 Simulation` $\rightarrow$ `PDC Analysis` (Reconstruction)**
+1. QMD Raw Data
+
+    (apply physical cuts, sampling, and export for simulation)
+
+2. Geant4 Input
+
+    (convert sampled QMD to ROOT/macros; configure target, beam, and detector geometry)
+
+3. Geant4 Simulation
+
+    (run macros, collect hit/energy-deposit trees and output ROOT files)
+
+4. PDC Analysis (Reconstruction)
+
+    (perform PDC hit reconstruction, back-propagate tracks, and fit momentum)
+
 
 *   **Scripts**: Developed for QMD data transformation, cutting, sampling, and reconstruction analysis (supporting both 3D visualization and batch processing).
 *   **Status**: The core framework is operational and ready for optimization testing.
@@ -53,6 +68,15 @@ We have established a complete simulation and analysis framework with the follow
 </figure>
 
 
+![alt text](assets/report_20251126_en/image-2.png)
+来自论文的 探测器效率
+
+![alt text](assets/report_20251126_en/image-3.png)
+来自某个slides的报告
+
+
+
+
 ### 4.3. PDC Analysis & Reconstruction （trans geant data to n/p momentum）
 
 *   **Methodology**: Since the PDC primarily determines the particle direction, the reconstruction algorithm optimizes the **momentum magnitude** by minimizing the distance between the back-propagated track and the known target position.
@@ -71,6 +95,7 @@ We have established a complete simulation and analysis framework with the follow
 
 
 
+
 ## 5. Optimization Strategy
 To address the low reconstruction speed (currently ~0.1 Hz) and accuracy issues, the following strategies are being implemented:
 
@@ -80,7 +105,54 @@ To address the low reconstruction speed (currently ~0.1 Hz) and accuracy issues,
 4.  **I/O Optimization**: Using asynchronous logging to prevent I/O blocking.
 
 ## 6. Next Steps (To-Do)
+
+
 1.  **Data Generation**: Complete QMD data sampling and generate final ROOT files for Geant4 input.
 2.  **Performance Tuning**: Continue optimizing the Geant4 simulation and reconstruction code for speed.
 3.  **Configuration Study**: Systematically test different target positions corresponding to various magnetic fields and beam deflection angles.
 4.  **Physics Analysis**: Investigate isovector effects in deuteron simulations.
+
+
+## code detail
+
+### qmd data sampling
+
+nothing yet
+
+### geant4
+
+nothing
+
+
+### pdc ana (and nebula)  reconstruction
+
+ PDC Analysis Methodology
+The PDC (Position Detector Chamber) analysis reconstructs particle hit positions from two drift chambers using a Center-of-Mass (CoM) weighted energy deposition method: PDCSimAna.cc:177-202
+
+The reconstruction:
+
+Processes U and V layer hits independently
+Applies Gaussian position smearing for detector resolution
+Reconstructs 3D positions at PDC1 and PDC2
+Transforms coordinates accounting for spectrometer rotation angle PDCSimAna.hh:22-61
+
+Runge-Kutta Integration (Core Physics Engine)
+The trajectory calculation uses 4th-order Runge-Kutta integration for solving particle motion in magnetic fields: ParticleTrajectory.cc:159-206
+
+Physics implementation:
+
+Relativistic kinematics: E = √(p² + m²)
+Lorentz force: dp/dt = q(v × B)
+Step size: typically 1 mm
+Physics constant: 89.87551787 for unit conversion (line 141) ParticleTrajectory.cc:120-157
+4. NEBULA Neutron Reconstruction
+For neutral particles (neutrons), a completely different approach is used: NEBULAReconstructor.cc:203-271
+
+Methodology:
+
+Time-of-flight (TOF) based reconstruction (no magnetic field effect)
+Energy-weighted position clustering
+Time window clustering (default 10 ns)
+Energy threshold filtering (default 1 MeV)
+Beta calculation: β = (flight distance / flight time) / c
+Kinetic energy: KE = (γ - 1) × m_neutron
