add signgle plot in pdc postion test

--- a/docs/note_log/log202511.md
+++ b/docs/note_log/log202511.md
@@ -135,6 +135,15 @@ http://ribf.riken.jp/~hsato/fieldmaps/141114-0,8T-6000.zip
 
 这个日志之前应该都有问题。 这个时间之后不一定没问题。 
 
+![alt text](assets/log202511/image-6.png)
+
+![alt text](assets/log202511/image-7.png)
+
+![alt text](assets/log202511/image-8.png)
+
+![alt text](assets/log202511/image-9.png)
+
+![alt text](assets/log202511/image-10.png)
 
 todo
 
