fix dependency in spana sever

--- a/docs/note_log/log202512.md
+++ b/docs/note_log/log202512.md
@@ -10,4 +10,15 @@ $P = \sqrt{(E)^2 - (m)^2} = \sqrt{(190+938)^2 - (938)^2} MeV/c = 625.5MeV/c$
 
 
 
-## 2025-12-02
+## 2025-12-03
+
+use micromaba . .yml to create a env for anaroot . useing root and geant4 in conda-forge
+
+
+## 2025-12-04
+
+我希望 调大动量范围。 
+
+todo 探寻 质子动量空间（可被接受的空间） 画出三维空间图来， 以及做出来此时的pxp-pxn (无模糊 只filter)
+
+取样好还是参数取点好。 
