add lognote, remove some md

--- a/docs/note_log/log202512.md
+++ b/docs/note_log/log202512.md
@@ -1,24 +1,100 @@
 # 2025 12 月 notebook
 
-## 2025-12-01
+## 2025-12-02
 
 更换了qmd特征动量的大小,从600MeV/c改为627MeV/c,以更好地匹配实验数据.
 
+Changed the QMD characteristic momentum from 600 MeV/c to 627 MeV/c to better match experimental data.
+
 $P = \sqrt{(E)^2 - (m)^2} = \sqrt{(190+938)^2 - (938)^2} MeV/c = 625.5MeV/c$
-
-
-
-
 
 ## 2025-12-03
 
+change homebrew g++ cmake root to conda-forge versions.
+
 use micromaba . .yml to create a env for anaroot . useing root and geant4 in conda-forge
 
+```yml
+name: anaroot-env
+channels:
+  - conda-forge
+dependencies:
+  - python=3.10
+  - cmake
+  - make
+  - git
+  - wget
+  - pkg-config
+  - gcc_linux-64
+  - gxx_linux-64
+  - root
+  - geant4
+  - xerces-c
+  - fftw
+  - gsl
+  - libxml2
+  - libpng
+  - zlib
+  - swig
+  - pip
+  - xorg-libx11
+  - xorg-libxpm
+  - xorg-libxft
 
-## 2025-12-04
+```
 
-我希望 调大动量范围。 
+```
+# 初始化 micromamba
+eval "$(micromamba shell hook -s bash)"  # 或 -s zsh
 
-todo 探寻 质子动量空间（可被接受的空间） 画出三维空间图来， 以及做出来此时的pxp-pxn (无模糊 只filter)
+可选：自动激活 anaroot 环境
+micromamba activate anaroot-env
+```
+
+
+direnv is an open-source extension that automatically loads and executes the environment variables and scripts defined in a .envrc file when you enter (cd into) a directory containing one. It automatically unloads those variables when you leave the directory.
+
+```
+# Auto-generated .envrc for Dpol_smsimulator
+# This file will be executed by direnv when you cd into the project root.
+# Ensure micromamba is initialized in this shell (zsh) before using `micromamba activate`.
+# Keep this file small and review before allowing with `direnv allow`.
+
+# Initialize micromamba shell hook for zsh (direnv runs this file with your login shell)
+if command -v micromamba >/dev/null 2>&1; then
+  eval "$(micromamba shell hook --shell zsh)"
+fi
+
+# Source the project setup which performs activation and exports variables
+if [[ -f ./setup_spana.sh ]]; then
+  source ./setup_spana.sh
+fi
+```
+
+
+## 2025-12-05
+
+我希望调大动量范围。 
+
+todo 探寻质子动量空间（可被接受的空间）画出三维空间图来，以及做出来此时的pxp-pxn (无模糊 只filter)
 
 取样好还是参数取点好。 
+
+数据的透明选择,root如何做到
+
+I want to increase the momentum range. TODO: Explore the acceptable proton momentum space, visualize it in a 3D plot, and calculate $p_{p} - p_{n}$ (without blurring, only filtering). Which is better: sampling or parametric point scanning?
+
+
+
+```bash
+root -b -q $ROOTSYS/tutorials/legacy/benchmarks.C > rootbenchmarktest.txt
+```
+
+| name | root benchmark | cpu |
+|------|-----------------|-----|
+| RIBFANA 04 | 5022 | Intel Xeon Gold 5218 @ 2.30GHz |
+| SYNCHRO 3 | 4972 | Intel Xeon Platinum 8168 @ 2.70GHz |
+| EXAFS | 2186 | Intel Xeon E5-2650 v4 @ 2.20GHz |
+| SCP RAX | 19779 | AMD Ryzen 7 5700H |
+| Thinkpad X1 Carbon (U5/L5) | 4945 | i7-1260P |
+
