fix ocr bug in note log

--- a/docs/note_log/log202512.md
+++ b/docs/note_log/log202512.md
@@ -90,11 +90,11 @@ I want to increase the momentum range. TODO: Explore the acceptable proton momen
 root -b -q $ROOTSYS/tutorials/legacy/benchmarks.C > rootbenchmarktest.txt
 ```
 
-| name | root benchmark | cpu |
-|------|-----------------|-----|
-| RIBFANA 04 | 5022 | Intel Xeon Gold 5218 @ 2.30GHz |
-| SYNCHRO 3 | 4972 | Intel Xeon Platinum 8168 @ 2.70GHz |
-| EXAFS | 2186 | Intel Xeon E5-2650 v4 @ 2.20GHz |
-| SCP RAX | 19779 | AMD Ryzen 7 5700H |
-| Thinkpad X1 Carbon (U5/L5) | 4945 | i7-1260P |
+| name | root benchmark | cpu | description |   
+|------|-----------------|-----|-------------|
+| RIBFANA 04 | 5022 | Intel Xeon Gold 5218 @ 2.30GHz | riken |
+| spana03| 4972 | Intel Xeon Platinum 8168 @ 2.70GHz | riken |
+| ENPG | 2186 | Intel Xeon E5-2650 v4 @ 2.20GHz | zhigang group |
+| SER5 MAX | 19444 | AMD Ryzen 7 5700H | tbt pc |
+| Thinkpad X1 Carbon hen10 | 4945 | i7-1260P | tbt pc |
 
