add neutron exit window

--- a/docs/note_log/log202512.md
+++ b/docs/note_log/log202512.md
@@ -96,5 +96,145 @@ root -b -q $ROOTSYS/tutorials/legacy/benchmarks.C > rootbenchmarktest.txt
 | spana03| 4972 | Intel Xeon Platinum 8168 @ 2.70GHz | riken |
 | ENPG | 2186 | Intel Xeon E5-2650 v4 @ 2.20GHz | zhigang group |
 | SER5 MAX | 19444 | AMD Ryzen 7 5700H | tbt pc |
-| Thinkpad X1 Carbon hen10 | 4945 | i7-1260P | tbt pc |
+| Thinkpad X1 Carbon gen10 | 4945 | i7-1260P | tbt pc |
+
+## 2025-12-9
+
+使用hostname 为不同机器加载不同的软件路径
+
+查看root数据文件, 
+
+
+## 2025-12-10
+
+try to fix root .
+
+.root 文件被 TBrowser 打开 自动展开嵌套, 加载自定义类. 需要利用反射机制. 
+
+geant4 nebula里面似乎没有这样的实现.  
+
+
+https://tianbaiting.github.io/sci/minimal_code/cernrootData/
+
+
+## 2025-12-11
+
+fix vscode intellisense wrong include path . 
+
+更新了 c_cpp_properties.json:
+
+添加了 "compileCommands" 字段,指向 CMake 生成的编译命令数据库
+更新了 C++ 标准为 c++20 (与 CMakeLists.txt 一致)
+更新了 CMakeLists.txt:
+
+添加了 set(CMAKE_EXPORT_COMPILE_COMMANDS ON),确保每次 CMake 配置时都生成 compile_commands.json
+重新配置了 CMake:
+
+生成了 113KB 的 compile_commands.json 文件,包含所有编译单元的完整信息
+
+
+
+buy dpol detector 合同 
+
+
+```
+627*tan(10/180.0*TMath::Pi())
+(double) 110.55702
+```
+
+![alt text](assets/log202512/image.png)
+
+先加 Neutron exit window,
+
+
+根据konda 的smsimulator里面各种项目里
+
+
+```
+  //------------------------------ exit window for neutrons
+  fExitWindowNConstruction->ConstructSub();
+  fExitWindowNConstruction->SetAngle(magAngle);
+  fExitWindowNConstruction->PutExitWindow(experimentalHall_log);
+  if (fNeutronWinSD==0){
+    fNeutronWinSD = new FragmentSD("/NeutronWindow");
+    SDMan->AddNewDetector(fNeutronWinSD);
+```
+
+
+```
+//------------------------------ exit window for neutrons  
+fExitWindowNConstruction->ConstructSub();  
+fExitWindowNConstruction->SetAngle(magAngle);  
+fExitWindowNConstruction->PutExitWindow(experimentalHall_log);  
+  
+if (fNeutronWinSD==0){  
+  fNeutronWinSD = new FragmentSD("/NeutronWindow");  
+  SDMan->AddNewDetector(fNeutronWinSD);  
+}  
+fExitWindowNConstruction->GetWindowVolume()->SetSensitiveDetector(fNeutronWinSD);
+```
+
+需要在头文件中添加的声明
+detector construction头文件中需要添加：
+```
+class ExitWindowNConstruction;  
+  
+private:  
+  ExitWindowNConstruction *fExitWindowNConstruction;  
+  G4VSensitiveDetector* fNeutronWinSD;
+```
+
+构造函数中的初始化
+在构造函数中需要初始化： 
+
+fExitWindowNConstruction = new ExitWindowNConstruction();
+
+析构函数中的清理
+在析构函数中需要添加：
+
+delete fExitWindowNConstruction;
+
+发现报错 device 自模块如何集成. 
+
+需要链接smdevices库
+
+在smg4lib里面添加, sim_deuteron里面添加, 相关的cmake语句. 
+
+
+![alt text](assets/log202512/image-1.png)
+
+
+## 2025-12-12
+
+添加 charged particle exit window 
+
+ there are 2 exit windows 
+
+ ```
+libs/smg4lib/src/devices on  main [✘!?] via △ v3.31.6 via 🐍 v3.13.5 (.venv) 
+❯ tree                           
+.
+├── CMakeLists.txt
+├── DipoleConstruction.cc
+├── DipoleConstruction.hh
+├── DipoleConstructionMessenger.cc
+├── DipoleConstructionMessenger.hh
+├── ExitWindowC1Construction.cc
+├── ExitWindowC1Construction.hh
+├── ExitWindowC2Construction.cc
+├── ExitWindowC2Construction.hh
+├── ExitWindowNConstruction.cc
+├── ExitWindowNConstruction.hh
+├── MagField.cc
+└── MagField.hh
+```
+
+C1版本: 主要在simdayone项目中使用 DayoneDetectorConstruction.cc:198-210
+
+C2版本: 在sim_samurai21、sim_tm1510、simtrace等较新项目中使用 SAMURAI21DetectorConstruction.cc:204-213 SimtraceDetectorConstruction.cc:178-187
+
+C2版本，提供了更大的孔径和更稳定的支撑结构;
+
+C1版本: Y方向孔径为40cm (400mm) ExitWindowC1Construction.cc:39-41
+C2版本: Y方向孔径为80cm (800mm)，比C1大一倍 ExitWindowC2Construction.cc:43-45
 
