--- a/docs/note_log/log202512.md
+++ b/docs/note_log/log202512.md
@@ -117,6 +117,29 @@ geant4 nebula里面似乎没有这样的实现.
 https://tianbaiting.github.io/sci/minimal_code/cernrootData/
 
 
+kndon_smsimulator fix cmake find anaroot
+
+枚举 $TARTSYS/lib 下的 ANAROOT 库。
+扩展 CMakeLists.txt 的 find_library 列表，补全必要的 ANAROOT 组件库。
+补充 ROOT 的 XML 组件，使 ANAROOT 里依赖的 XML 符号可解析。
+重建并确认 simtrace 等目标链接成功。
+我做了什么
+
+列出 ANAROOT 库：发现存在 libanacore.so, libanaloop.so, libanacatana.so, libanadali.so, libanasamurai.so, libanabrips.so, libanaespri.so, libanasilicons.so, libanawinds.so 等。
+扩展 CMakeLists.txt 的 ANAROOT 搜索：
+现在会查找并链接上述组件库（按存在性自动追加到 ANAROOT_LIBRARIES），不仅仅是 anaroot 和 XMLParser。
+补充 ROOT 组件：
+将 find_package(ROOT REQUIRED COMPONENTS …) 增加 XMLIO 和 XMLParser，以提供 TDOMParser/TXMLDocument/TXMLNode 等符号（ANAROOT 的 anacatana/anasamurai 依赖它们）。
+重新配置和构建：
+crosssection、get_pdgmass、simtrace 全部已成功链接并构建完成。
+目前状态
+
+编译错误已修复，所有相关目标成功构建。
+后续如新增 ANAROOT 组件库，当前 CMake 会自动发现并链接（只要库名在列表中）。
+可选后续
+
+
+
 ## 2025-12-11
 
 fix vscode intellisense wrong include path . 
@@ -238,3 +261,18 @@ C2版本，提供了更大的孔径和更稳定的支撑结构;
 C1版本: Y方向孔径为40cm (400mm) ExitWindowC1Construction.cc:39-41
 C2版本: Y方向孔径为80cm (800mm)，比C1大一倍 ExitWindowC2Construction.cc:43-45
 
+
+
+
+konda 的 simtrace 有c2 
+
+fix Bug. and run 
+
+![alt text](assets/log202512/image-2.png)
+
+cd $SMSIMDIR/work
+$SMSIMDIR/sources/build/projects/simtrace/simtrace
+
+don't show window
+
+![alt text](assets/log202512/image-3.png)
