add c2 exit window

--- a/docs/note_log/log202512.md
+++ b/docs/note_log/log202512.md
@@ -370,3 +370,85 @@ $SMSIMDIR/sources/build/projects/simtrace/simtrace
 don't show window
 
 ![alt text](assets/log202512/image-3.png)
+
+
+![alt text](assets/log202512/image-6.png)
+
+
+## 2025-12-15
+
+why anaroot on the web 
+```
+https://ribf.riken.jp/RIBFDAQ/index.php?plugin=attach&refer=Tools%2FAnalysis%2FANAROOT%2FInstallation&openfile=anaroot_v4.6.2.tgz
+```
+ is different from anaroot in ribdana04
+| 对比项 | ribfana04 (本地 ANAROOT) | web ANAROOT |
+|---|---|---|
+| 构建工具 (Build system) | Autotools | CMake |
+| 配置文件 | configure.in + Makefile.am | CMakeLists.txt |
+| 学习曲线 | 较陡峭 | 相对平缓 |
+| 跨平台 | 优秀 | 优秀 |
+| IDE 支持 | 有限 | 原生支持 |
+| 依赖检查时机 | 运行时检查 | 配置时检查 |
+
+
+% kobayashi cite tree
+
+% look for exit window set and rigid accuracacy
+% ![alt text](assets/log202512/Map.png)
+
+
+
+
+## 2025-12-16
+
+todo 
+
+-[x] why only simtrace is build after using cmake. default option
+-[]  what is exitwindowc1
+-[] chekc filter after geo acceptence
+-[] useing math to estimate the accuracy of reconstructed momentum. of rigid reconstruction
+
+```
+### default install projects  ---------------------------
+option(use_simtrace "simple simulator of SAMURAI" ON)
+option(use_crosssection "crosssection" ON)
+option(use_get_pdgmass "get_pdgmass" ON)
+```
+
+
+
+https://ribf.riken.jp/SAMURAI/120425_SAMURAIConstProp.pdf
+
+https://s3.cern.ch/inspire-prod-files-3/3c4ae5817492ea3c90d12a39dca4014b
+
+https://www.sciencedirect.com/science/article/pii/S0168583X13007118
+
+simdayone c1 exit window 
+
+![alt text](assets/log202512/image-4.png)
+
+![alt text](assets/log202512/image-6.png)
+
+
+simtrace c2 exit window
+
+![alt text](assets/log202512/image-5.png)
+
+
+
+|---|---|---|---|
+| 几何主体 | 简单矩形盒子 (window_flange_box) | 带有上下加强肋/管座的复杂布尔体 | V1 结构非常简单，似乎是 V2 的概念简化版或早期原型。V2 更加机械工程化，旨在提高强度。 |
+| 主体材料 | 逻辑体材料是 G4_Galactic (真空) | 逻辑体材料是 G4_Fe (铁) | 重要差异！V1 的 window_flange_log 逻辑体材料被错误地设置为真空，而 V2 的主体是铁，意味着 V1 并没有模拟法兰的实体部分，只是一个真空区域。 |
+| 窗膜模拟 | 未定义独立的薄膜。中心孔洞 (fWindowHole_log) 被放置在法兰逻辑体内部。 | 未定义独立的薄膜。 | 两个版本都缺乏 V1 (ExitWindowN) 中 3 mm 厚的真实窗膜结构。 |
+| 整体尺寸 (X×Y) | 3340.25 mm × 1200 mm | 3340 mm × 1200 mm | 尺寸基本相同，两者都是大型法兰。 |
+| 中心孔径 (X×Y) | 2800 mm × 400 mm | 2940 mm × 800 mm | 核心差异！V1 的 Y 方向（垂直）孔径为 400 mm（符合注释中的 40 cm），而 V2 的孔径是 800 mm。 |
+| 组件位置 (Z) | 3187.46 mm | 3187.46 mm | 位置完全相同。 |
+
+
+
+
+![alt text](assets/log202512/image-7.png)
+
+the pdc position(boyuan default set) is not good if we use c1 exit window.
+
