add vacuumDownstream in geant4

--- a/docs/note_log/log202512.md
+++ b/docs/note_log/log202512.md
@@ -404,10 +404,10 @@ https://ribf.riken.jp/RIBFDAQ/index.php?plugin=attach&refer=Tools%2FAnalysis%2FA
 
 todo 
 
--[x] why only simtrace is build after using cmake. default option
--[]  what is exitwindowc1
--[] chekc filter after geo acceptence
--[] useing math to estimate the accuracy of reconstructed momentum. of rigid reconstruction
+- [x] why only simtrace is build after using cmake. default option
+- [x]  what is exitwindowc1
+- [ ] chekc filter after geo acceptence
+- [ ] useing math to estimate the accuracy of reconstructed momentum. of rigid reconstruction
 
 ```
 ### default install projects  ---------------------------
@@ -437,7 +437,8 @@ simtrace c2 exit window
 
 
 
-|---|---|---|---|
+| 对比类型 \ version|c1 | c2 | 评论|
+|------------|---|-----|-----|
 | 几何主体 | 简单矩形盒子 (window_flange_box) | 带有上下加强肋/管座的复杂布尔体 | V1 结构非常简单，似乎是 V2 的概念简化版或早期原型。V2 更加机械工程化，旨在提高强度。 |
 | 主体材料 | 逻辑体材料是 G4_Galactic (真空) | 逻辑体材料是 G4_Fe (铁) | 重要差异！V1 的 window_flange_log 逻辑体材料被错误地设置为真空，而 V2 的主体是铁，意味着 V1 并没有模拟法兰的实体部分，只是一个真空区域。 |
 | 窗膜模拟 | 未定义独立的薄膜。中心孔洞 (fWindowHole_log) 被放置在法兰逻辑体内部。 | 未定义独立的薄膜。 | 两个版本都缺乏 V1 (ExitWindowN) 中 3 mm 厚的真实窗膜结构。 |
@@ -452,3 +453,6 @@ simtrace c2 exit window
 
 the pdc position(boyuan default set) is not good if we use c1 exit window.
 
+
+
+![alt text](assets/log202512/image-8.png)
