fix half of geometry, add rotation in beamgun, add doc

--- a/docs/note_log/log202512.md
+++ b/docs/note_log/log202512.md
@@ -377,11 +377,11 @@ don't show window
 
 ## 2025-12-15
 
-why anaroot on the web 
+why anaroot on the web  is different from anaroot in ribdana04
 ```
 https://ribf.riken.jp/RIBFDAQ/index.php?plugin=attach&refer=Tools%2FAnalysis%2FANAROOT%2FInstallation&openfile=anaroot_v4.6.2.tgz
 ```
- is different from anaroot in ribdana04
+
 | 对比项 | ribfana04 (本地 ANAROOT) | web ANAROOT |
 |---|---|---|
 | 构建工具 (Build system) | Autotools | CMake |
@@ -516,3 +516,34 @@ cd build && make RunQMDGeoFilter
 
 
 ![alt text](assets/log202512/image-11.png)
+
+
+qmd 数据是在靶点的局部坐标系中定义的. 需要把动量旋转到实验室坐标系中.
+
+```
+    for (auto& p : fProtons) {
+        p.vertex = targetPos;
+        
+        // 旋转动量：从target局部坐标系到实验室坐标系
+        // QMD数据中的动量是在target局部坐标系中定义的
+        TVector3 pLocal = p.momentum.Vect();
+        double px_lab = pLocal.X() * cos_theta + pLocal.Z() * sin_theta;
+        double py_lab = pLocal.Y();
+        double pz_lab = -pLocal.X() * sin_theta + pLocal.Z() * cos_theta;
+        
+        double E = TMath::Sqrt(px_lab*px_lab + py_lab*py_lab + pz_lab*pz_lab + 
+                               p.mass * p.mass);
+        p.momentum.SetPxPyPzE(px_lab, py_lab, pz_lab, E);
+    }
+    
+```
+
+但是最后画图 需要画的是靶点的局部坐标系下的动量分布. 
+    
+qmd数据是不是有问题:
+
+![alt text](assets/log202512/image-12.png)
+
+![alt text](assets/log202512/image-14.png)
+
+![alt text](assets/log202512/image-13.png)
