fix some bug in vismac

--- a/docs/note_log/log202601.md
+++ b/docs/note_log/log202601.md
@@ -48,4 +48,21 @@ todo
 
 生成各个配置的pdc位置 mac文件 分文件夹存储.
 
-vis.mac  氘核束流选项 和 
+vis.mac  氘核束流选项 和
+
+
+原始段错误的原因是磁场文件格式与代码不匹配：
+
+磁场文件 180703-1,40T-6000.table 使用 6000mm 范围、20mm 步长的网格
+代码原本只支持 3000mm 范围、10mm 步长的网格
+当代码用 v[0]/10 计算数组索引时，6000mm 范围的数据会产生超出数组边界的索引（如 600 > 300）
+修复内容
+MagField.hh: 添加了 fStepSize 和 fMaxRange 成员变量来存储网格参数
+
+MagField.cc:
+
+构造函数初始化新变量
+.table 文件读取时自动检测文件格式（通过读取文件头中的 ny 值）
+使用动态步长计算数组索引，并添加边界检查
+.bin 文件读取支持新旧两种格式（自动兼容）
+GetFieldValue 函数使用动态步长和范围进行插值计算
