add fixed target in geo acept filter

--- a/docs/note_log/log202601.md
+++ b/docs/note_log/log202601.md
@@ -70,4 +70,74 @@ GetFieldValue 函数使用动态步长和范围进行插值计算
 以及取消这一个变化. 转而下载合适的磁场文件.
 
 ##
+```
+/samurai/geometry/PDC/Angle 65 deg
+/samurai/geometry/PDC/Position1 +0 0 400 cm
+/samurai/geometry/PDC/Position2 +0 0 500 cm
+```
+this pdc position is better. 
 
+![alt text](assets/log202601/image.png)
+
+
+PrimaryGeneratorActionBasic.cc:362-364
+```cpp
+
+  TBeamSimData data;
+  data.fPrimaryParticleID = 0;
+  data.fZ                 = particle->GetAtomicNumber();
+  data.fA                 = particle->GetAtomicMass();
+  data.fPDGCode           = particle->GetPDGEncoding();
+  data.fParticleName      = particle->GetParticleName();
+  data.fCharge            = particle->GetPDGCharge()/eplus;
+  data.fMass              = M/MeV;
+  data.fTime              = 0;// not implemented
+  data.fIsAccepted        = kTRUE;
+  data.fMomentum.SetPxPyPzE(0,0,P/MeV,E/MeV);
+  data.fMomentum.RotateY(fBeamAngleX/rad);
+  data.fMomentum.RotateX(-fBeamAngleY/rad);
+  data.fPosition.SetXYZ(fBeamPosition.x()/mm,
+			fBeamPosition.y()/mm,
+			fBeamPosition.z()/mm);
+
+  gBeamSimDataArray->push_back(data);
+  SetPrimaryVertex(anEvent);
+}
+```
+
+TBeamSimdata has the rotation code.
+
+
+PrimaryGeneratorActionBasic.cc:407-410
+```cpp
+
+
+```
+
+Angle Rotation Mechanism
+Yes, the emission angles are rotated. The angle rotation is implemented differently depending on the beam type:
+
+For Pencil Beam
+The momentum vector is created along the Z-axis and then rotated by the beam angles. The rotation is performed using RotateY for the X-angle and RotateX (with negative sign) for the Y-angle: PrimaryGeneratorActionBasic.cc:362-364
+
+For Gaussian Beam
+Similar rotation is applied, but the angles are sampled from Gaussian distributions centered at fBeamAngleX and fBeamAngleY with spreads fBeamAngleXSigma and fBeamAngleYSigma: PrimaryGeneratorActionBasic.cc:407-410
+
+For Deuteron-Specific Implementation
+The DeutPrimaryGeneratorAction (which inherits from PrimaryGeneratorActionBasic) adds an additional rotation when fUseTargetParameters is enabled. It rotates the beam direction by the negative target angle to transform from the beam frame to the laboratory frame: DeutPrimaryGeneratorAction.cc:50-63
+
+Angle Control
+The beam angles are controlled through several member variables and setter methods:
+
+fBeamAngleX and fBeamAngleY: Central beam angles
+fBeamAngleXSigma and fBeamAngleYSigma: Angular spreads for Gaussian beam PrimaryGeneratorActionBasic.hh:79-82
+These parameters can be set programmatically through methods like SetBeamAngleX(), SetBeamAngleY(), SetBeamAngleXSigma(), and SetBeamAngleYSigma(): PrimaryGeneratorActionBasic.hh:44-47
+
+Particle Emission
+After generating the beam data, particles are actually emitted through the SetPrimaryVertex() method. This method reads the TBeamSimData objects from gBeamSimDataArray, configures the G4ParticleGun with the particle properties (type, energy, direction, position), and calls GeneratePrimaryVertex() to emit the particle into the Geant4 event: PrimaryGeneratorActionBasic.cc:140-194
+
+
+![alt text](assets/log202601/image-1.png)
+
+
+now, pdc used position is fixed at -1690 0 3625 cm , angle 65 deg(geo_feilter definition). (or geant4 mac definition: angle 65 (0,0, 4000))
